<resources>
    <string name="app_name">慧生活</string>

    <string name="title_activity_main">慧生活</string>
    <string name="terms_of_service">服务条款</string>

    <string name="timer_text">距离结束时间:</string>
    <string name="press_again_exit">再按一次退出</string>

    <!--健康报告-->
    <string name="check_report_one">检查项目</string>
    <string name="check_report_two">检查结果</string>
    <string name="check_report_three">参考范围</string>
    <string name="report_show_one">检查日期</string>
    <string name="report_show_two">检测结果</string>

    <string name="step_rank_photo">头像</string>
    <string name="step_rank_number">1</string>
    <string name="step_rank_name">Tony</string>
    <string name="step_rank_praise_count">11</string>
    <string name="select_all">全选</string>
    <string name="new_address_btn">新建收货地址</string>
    <string name="sign_phone">请输入您的手机号码</string>
    <string name="sign_code">获取验证码</string>
    <string name="sign_input_code">请输入验证码</string>
    <string name="sign_pwd_tips">不少于8位的数字、字母或符号</string>
    <string name="sign_nickname">昵称</string>
    <string name="sign_select_address">所在小区选择</string>
    <string name="sign_accept">我已接收登录服务条款</string>

    <string name="fa_angle_right">{fa-angle-right}</string>

    <string name="appoint_success">提交成功</string>

    <!--网络操作相关-->
    <string name="progress_login">登录中…</string>
    <string name="progress_register">注册中…</string>
    <string name="progress_normal">正在加载…</string>
    <string name="progress_reset">正在加载…</string>
    <string name="response_error">加载失败,请重试</string>
    <string name="network_error">网络链接错误</string>


    <!--商品详情简介-->
    <string name="product_pineapple_description">
        热带雨林气候,光照充足\n
        版纳古朴民风, 无激素和催熟\n\n
        温馨提示：\n
        1.人工采摘，大小个头不一，以重量为准；\n
        2.发货时间待定，待新鲜采摘后即刻发货；\n
        3.鉴于水果保质特性，请收货当日去皮食用\n
          或者冰箱冷藏72小时内请食用完毕。
    </string>
    <string name="product_egg_description">
        自然低密度农林散养，自由觅食，纯粮补喂\n
        公母同林，保持好心情\n
        蛋壳厚实，微量元素丰富\n\n
        温馨提示：\n
        1.	土鸡蛋整体偏小，食量大小不一，产蛋大小不一；\n
        2.	散养鸡大多三五天才下一次蛋，供应商尽早发货；\n
        3.	冰箱冷藏30天内请食用完毕。
    </string>
    <string name="product_honey_description">
        深山野生原蜜珍酿\n
        清香浓郁，甜而不腻\n
        采收季节：2016年春季\n\n
        温馨提示：\n
        1.	存放于低于25℃的阴凉干燥处;\n
        2.	每日三次，每次1茶匙;\n
        3.	一周岁以下婴幼儿、糖尿病患者以及\n
        蜂产品过敏者或其他禁忌者不建议食用；\n
        4.	忌与豆腐、韭菜同食，易导致腹泻。
    </string>


    <string name="clause_text">
        【慧生活】在此特别提醒用户认真阅读、充分理解本《用户协议》（下称《协议》）--- 用户应认真阅读、充分理解本《协议》中各条款，包括免除或者限制【慧生活】责任的免责条款及对用户的权利限制条款。请您审慎阅读并选择接受或不接受本《协议》（未成年人应在法定监护人陪同下阅读）。除非您接受本《协议》所有条款，否则您无权注册、登录或使用本协议所涉相关服务。您的注册、登录、使用等行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。
\n\n
本《协议》描述【慧生活】与用户之间关于【慧生活】服务相关方面的权利义务。本协议包括协议正文及所有【慧生活】发布的或未来可能发布或更新的各类规则，包括但不限于退换货政策、快递政策、发票政策、慧生活现金政策等。【慧生活】是云南彩立方数据科技有限公司推出的一款基于移动手机端，为用户提供社区的周边生活物业服务信息及交易服务的应用平台。"用户"是指注册、登录、使用、浏览【慧生活】并同意遵守本协议的个人或组织。
\n\n
本《协议》可由云南彩立方数据科技有限公司（下称"彩立方数据"）随时更新，更新后的协议条款一旦公布即代替原来的协议条款，不再另行通知。在彩立方数据修改《协议》条款后，如果用户不接受修改后的条款，请立即停止使用彩立方数据提供的服务，用户继续使用彩立方数据提供的服务将被视为已接受了修改后的协议。
\n\n
一、使用规则
1、	用户必须自行准备如下设备和承担如下开支：(1)上网设备，包括并不限于智能手机或者其他上网终端、调制解调器及其他必备的上网装置；(2)上网费用，包括并不限于网络接入费、上网设备租用费、手机流量费等。
\n\n
2、	用户充分了解并同意，【慧生活】是为用户提供交易、信息分享、传送及获取的平台，用户必须为自己注册账号下的一切行为负责，包括您所传送的任何内容以及由此产生的任何结果。用户应对【慧生活】中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险 。彩立方数据无法且不会对因用户行为而导致的任何损失或损害承担责任。
\n\n
3、	用户在【慧生活】服务中或通过【慧生活】服务所传送的任何内容并不反映彩立方数据的观点或政策，彩立方数据对此不承担任何责任。
\n\n
4、	用户充分了解并同意，【慧生活】是一个基于移动手机端提供生活物业服务及交易服务的平台，用户须对在【慧生活】上的注册信息的真实性、合法性、有效性承担全部责任，用户不得冒充他人；不得利用他人的名义传播任何信息；不得恶意使用注册账号导致其他用户误认；否则彩立方数据有权立即停止提供服务，收回【慧生活】账号并由用户独自承担由此而产生的一切法律责任。
\n\n
5、	用户须对在【慧生活】上所传送信息的真实性、合法性、无害性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与【慧生活】无关。用户通过【慧生活】公开发布的信息，第三方可以通过【慧生活】平台获取，用户对此已事先明知并自愿承担发布后果，如用户与第三方有任何争议或纠纷，彩立方数据对此不承担任何责任。
\n\n
6、【慧生活】保留因业务发展需要，单方面对本服务的全部或部分服务内容在任何时候不经任何通知的情况下变更、暂停、限制、终止或撤销【慧生活】服务的权利，用户需承担此风险。
\n\n
7、【慧生活】提供的服务中可能包括广告，用户同意在使用过程中显示【慧生活】和第三方供应商、合作伙伴提供的广告。
\n\n
8、	用户不得利用【慧生活】上载、复制、传播、发送如下内容，包括但不限于：\n
(1)   反对宪法所确定的基本原则的；\n
(2)  危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n
(3)  损害国家荣誉和利益的；\n
(4)  煽动民族仇恨、民族歧视，破坏民族团结的；\n
(5)  破坏国家宗教政策，宣扬邪教和封建迷信的；\n
(6)  散布谣言，扰乱社会秩序，破坏社会稳定的；\n
(7)  散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；\n
(8)  侮辱或者诽谤他人，或者侵害他人隐私权、名誉权、肖像权、知识产权、商业秘密等合法权利；\n
(9)  含有法律、行政法规禁止的其他内容的信息；\n
(10) 从事其他违反政策及公序良俗、社会公德的行为。
\n\n
9、	彩立方数据可依其合理判断，对违反有关法律法规或本协议约定；或侵犯、妨害、威胁任何人权利或安全的内容；或者假冒他人的行为；彩立方数据有权依法停止传输任何前述内容，并有权依其自行判断对违反本条款的任何人士采取适当的法律行动，包括但不限于，从【慧生活】中删除具有违法性、侵权性、不当性等内容，终止违反者的成员资格，阻止其使用【慧生活】全部或部分服务，并且依据法律法规保存有关信息并向有关部门报告等。
\n\n
二、交易规则\n
1、	商品信息：本站上的商品价格、数量、是否有货等商品信息随时都有可能发生变动，本站不作特别通知。由于网站上信息量庞大，虽然本站会尽最大努力保证您所浏览商品信息的准确性，但由于众所周知的互联网技术因素等客观原因存在，本站网页显示的信息可能会有一定的滞后性或差错，对此情形您知悉并理解。
为表述便利，商品和服务简称为"商品"或"货物"。
\n\n
2、	关于订单：\n
(1)、当您下订单时，请您仔细确认所购商品的名称、价格、数量、型号、规格、尺寸、联系地址、电话、收货人等信息。收货人与您本人不一致的，收货人的行为视为您的行为，您对收货人的行为承担连带责任。\n
您提交订单即表示对订单中所确认的订购商品、收货地址等信息的准确性负责。如果因为您填写的收货人联系电话、地址等信息错误，导致商家（或商家委托的配送公司）将货物交付给非您本意的收货人的，由此造成的损失需由您自行承担。\n
(2)、您理解并认可【慧生活】网站上的订单成立规则：\n
① 【慧生活】网站上展示的商品信息（如商品名称、价格、商品描述等）仅构成要约邀请。当用户通过【慧生活】网站订购商品，确定购买并成功提交订单时（订单内容应包含购买的商品数量、价格及支付方式、收货人、联系方式、收货地址等信息），即视为用户向商家发出了购买订单商品的要约。\n
②   当商家通过【慧生活】网站确认订单后，才构成商家对该订单的承诺，此时订购合同即告成立。\n
③   如果用户在一张订单中订购了多件商品，但商家只确认了部分商品订单的，则视为商家只对已确认的部分订单构成承诺。\n
(3)、商家仅向消费者提供商品销售服务，若您并非因生活消费购买商品，而是中间商、零售商或批发商，则商家有权单方取消订单。\n
(4)、若您拟购买的商品超过网站内公示的购买数量限制，请您与【慧生活】或者相关第三方商家联系。\n
(5)、商家在下列情况下，可以取消用户订单：\n
①   经与顾客协商达成一致的；\n
② 【慧生活】网站上显示的商品信息明显错误或缺货的；\n
③   用户订单信息明显错误或用户订购数量超出商家备货量的。\n
(6)、【慧生活】在下列情况下，亦可取消用户订单：\n
①   因不可抗力、【慧生活】网站系统发生故障或遭受第三方攻击，及其他【慧生活】网站无法控制的情形，根据【慧生活】网站判断需要取消用户订单的；\n
②   经【慧生活】网站判断，用户订购行为不符合公平原则或诚实信用原则的情形；\n
③   按【慧生活】网站已经发布的或将来可能发布或更新的各类规则，可取消用户订单的其他情形。\n
\n\n
3、	配送\n
(1)、商家负责将订购商品配送到用户指定的收货地址。所有在【慧生活】网站上列出的配送时间皆为参考时间，仅供用户参照使用。该参考时间是根据商品库存状况、订单处理流程和配送地点等情况综合计算得出的。\n
(2)、因如下情况造成订单延迟或无法配送、交货等，商家不承担延迟配送、交货的责任：\n
①   您提供的信息错误、地址不详细等原因导致的；\n
②   货物送达后无人签收，导致无法配送或延迟配送的；\n
③   情势变更因素导致的；\n
④   未能在本站所示的送货参考时间内送货的；\n
⑤   您与商家约定特殊时间段内送货的；\n
⑥   因节假日、大型促销活动、店庆、预购或抢购人数众多等原因导致的；\n
⑦   不可抗力因素导致的，例如：自然灾害、交通戒严、突发战争等。\n
\n
三、用户权利及义务
\n
1、【慧生活】账号的所有权归彩立方数据所有，用户完成申请注册手续后，获得【慧生活】账号的使用权，该使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。彩立方数据因经营需要，有权回收用户的【慧生活】账号。
\n\n
2、	用户有权更改、删除在【慧生活】上的个人资料、注册信息及传送内容等，但需注意，删除有关信息的同时也会删除任何您储存在系统中的文字和图片。用户需承担该风险。
\n\n
3、	用户有责任妥善保管注册账号信息及账号密码的安全，用户需要对注册账号以及密码下的行为承担法律责任。用户同意在任何情况下不使用其他成员的账号或密码。在您怀疑他人在使用您的账号或密码时，您同意立即通知彩立方数据。
\n\n
4、	用户应遵守本协议的各项条款，正确、适当地使用本服务，如因用户违反本协议中的任何条款，彩立方数据有权依据协议终止对违约用户【慧生活】账号提供服务。同时，彩立方数据保留在任何时候收回【慧生活】账号、用户名的权利。如果用户的服务被终止或取消，彩立方数据可以从服务器上永久地删除用户的数据。服务终止或取消后，彩立方数据没有义务向用户返还数据。
\n\n
5、	用户注册【慧生活】账号后如果长期不登录该账号，【慧生活】有权回收该账号，以免造成资源浪费，由此带来问题均由用户自行承担。
\n\n
四、隐私保护\n
1、	用户同意个人隐私信息是指那些能够对用户进行个人辨识或涉及个人通信的信息，包括下列信息：用户真实姓名，身份证号，手机号码，IP地址。 而非个人隐私信息是指用户对本服务的操作状态以及使用习惯等一些明确且客观反映在彩立方数据服务器端的基本记录信息和其他一切个人隐私信息范围外的普通信息；以及用户同意公开的上述隐私信息。尊重用户个人隐私信息的私有性是【慧生活】的一贯制度，【慧生活】将会采取合理的措施保护用户的个人隐私信息，除法律或有法律赋予权限的政府部门要求或用户同意等原因外，【慧生活】未经用户同意不向除合作单位以外的第三方公开、透露用户个人隐私信息。 但是，用户在注册时选择同意，或用户与【慧生活】及合作单位之间就用户个人隐私信息公开或使用另有约定的除外，同时用户应自行承担因此可能产生的任何风险， 【慧生活】对此不予负责。同时，为了运营和改善【慧生活】的技术和服务，【慧生活】将可能会自行收集使用或向第三方提供用户的非个人隐私信息，这将有助于【慧生活】向用户提供更好的用户体验和提高【慧生活】的服务质量。
\n\n
2、	用户同意，在使用【慧生活】服务时也同样受彩立方数据隐私政策的约束。当您接受本协议条款时，您同样认可并接受彩立方数据隐私政策的条款。
\n\n
3、	用户同意，您选择向【慧生活】的商家提交订单购买商品时，视为您向该商家披露个人相关信息，接受商家向您提供商品销售、配送、售后服务、客户服务、处理信用卡付款、数据分析、市场营销或其他必要事宜。如前述全部或部分事宜涉及由商家外的第三方履行的，商家有权将您的信息以必要方式向第三方披露，第三方有权以履行上述事宜为目的联系您。
\n\n
五、彩立方数据【慧生活】商标信息\n
【慧生活】服务中所涉及的图形、文字或其组成，以及其他【慧生活】标志及产品、服务名称，均为彩立方数据之商标（以下简称"【慧生活】标识"）。未经彩立方数据事先书面同意 ，用户不得将【慧生活】标识以任何方式展示或使用或作其他处理，也不得向他人表明您有权展示、使用、或其他有权处理彩立方数据标识的行为。
\n\n
六、法律责任及免责\n
1、	用户违反本《协议》或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户同意赔偿【慧生活】与合作公司 、关联公司，并使之免受损害。
\n\n
2、	用户因第三方如电信部门的通讯线路故障、技术问题、网络、电脑故障、系统不稳定性及其他各种不可抗力原因而遭受的一切损失，【慧生活】及合作单位不承担责任。
\n\n
3、	因技术故障等不可抗事件影响到服务的正常运行的，【慧生活】及合作单位承诺在第一时间内与相关单位配合，及时处理进行修复，但用户因此而遭受的一切损失 ，【慧生活】及合作单位不承担责任。
\n\n
4、	本服务同大多数互联网服务一样，受包括但不限于用户原因、网络服务质量、社会环境等因素的差异影响，可能受到各种安全问题的侵扰，如他人利用用户的资料，造成现实生活中的骚扰；用户下载安装的其它软件或访问的其他网站中含有"特洛伊木马"等病毒，威胁到用户的计算机信息和数据的安全，继而影响本服务的正常使用等等。用户应加强信息安全及使用者资料的保护意识，要注意加强密码保护，以免遭致损失和骚扰。
\n\n
5、	用户须明白，使用本服务因涉及Internet服务，可能会受到各个环节不稳定因素的影响。因此，本服务存在因不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险。用户须承担以上风险，彩立方数据不作担保。对因此导致用户不能发送和接受阅读信息、或接发错信息，彩立方数据不承担任何责任。
\n\n
6、	用户须明白，在使用本服务过程中存在有来自任何他人的包括威胁性的、诽谤性的、令人反感的或非法的内容或行为或对 他人权利的侵犯（包括知识产权 ）的匿名或冒名的信息的风险，用户须承担以上风险，彩立方数据合作公司对本服务不作任何类型的担保，不论是明确的或隐含的，包括所有有关信息真实性、适商性、适于某一特定用途、所有权和非侵权性的默示担保和条件，对因此导致任何因用户不正当或非法使用服务产生的直接、间接、偶然、特殊及后续的损害，不承担任何责任。
\n\n
7、	彩立方数据定义的信息内容包括：文字、软件、声音、相片、录像、图表；在广告中全部内容；彩立方数据为用户提供的商业信息，所有这些内容受版权、商标权、和其它知识产权和所有权法律的保护。所以，用户只能在彩立方数据和广告商授权下才能使用这些内容，而不能擅自复制、修改、编纂这些内容、或创造与内容有关的衍生产品。
\n\n
8、	在任何情况下，彩立方数据均不对任何间接性、后果性、惩罚性、偶然性、特殊性或刑罚性的损害，包括因用户使用【慧生活】服务而遭受的利润损失，承担责任（ 即使【慧生活】已被告知该等损失的可能性亦然）。尽管本协议中可能含有相悖的规定，彩立方数据对您承担的全部责任，无论因何原因或何种行为方式，始终不超过您在成员期内因使用【慧生活】服务而支付给彩立方数据的费用(如有) 。
\n\n
9、	用户协议的成立、生效、履行及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。若您和彩立方数据之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，应提交彩立方数据注册地有管辖权的人民法院管辖。
\n\n
七、其他条款\n
1、	本《协议》所定的任何条款的部分或全部无效者，不影响其它条款的效力。
\n\n
2、	本《协议》的版权由彩立方数据所有，彩立方数据保留一切解释和修改权利。
\n\n
3、	本协议的订立、执行和解释及争议的解决均应适用中华人民共和国的法律。如就本协议内容或其执行发生任何争议，则双方应首先通过友好协商方式解决；协商不成的，任何一方均应向彩立方数据所在地人民法院提起诉讼。
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">"<h1>XX区XX街道XX (小区名称) XX栋XX单元XXX室</h1>"</string>
    <string name="default_address">[默认地址]</string>
    <string name="address_delete">删除</string>
    <string name="address_edit">编辑</string>
    <string name="address_set_default">设为默认地址</string>
    <string name="save">保存</string>
</resources>
