<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/rank_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/global_text"
        android:layout_centerVertical="true"
        android:textSize="@dimen/text_14"
        android:text="@string/step_rank_number"/>
    
    <ImageView
        android:id="@+id/rank_photo"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:adjustViewBounds="true"
        android:layout_toRightOf="@id/rank_index"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="15dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/step_rank_photo"
        android:src="@drawable/user_default"/>

    <TextView
        android:id="@+id/rank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="@color/global_text"
        android:textSize="@dimen/text_14"
        android:layout_toRightOf="@id/rank_photo"
        android:text="@string/step_rank_name"/>

    <TextView
        android:id="@+id/praise_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/text_12"
        android:text="@string/step_rank_praise_count"
        tools:ignore="RelativeOverlap"/>
    <Button
        android:id="@+id/praise_button"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:background="@drawable/praise_orange"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/praise_count"
        android:checked="true"/>
    <!--<TextView-->
        <!--android:id="@+id/praise_count"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingLeft="6dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:textColor="@color/gray_text"-->
        <!--android:textSize="@dimen/text_12"-->
        <!--android:text="@string/step_rank_praise_count"-->
        <!--tools:ignore="RelativeOverlap"/>-->
    <!--<Button-->
        <!--android:id="@+id/praise_button"-->
        <!--android:layout_width="16dp"-->
        <!--android:layout_height="14dp"-->
        <!--android:background="@drawable/praise_orange"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_toLeftOf="@+id/praise_count"-->
        <!--android:checked="true"/>-->

    <TextView
        android:id="@+id/now_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="@dimen/text_22"
        android:layout_toLeftOf="@id/praise_button"
        android:textColor="@color/orange"
        android:text="9074"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_bg"
        android:layout_below="@id/rank_photo"
        android:layout_marginTop="16dp"/>
</RelativeLayout>