<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/one_report_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:fitsSystemWindows="false">

    <include layout="@layout/toolbar"/>

    <!--主体内容-->
    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/orange"
                    android:textColor="@color/white"
                    android:text="@string/check_report_one"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="1px"
                    android:layout_marginRight="1px"
                    android:background="@color/orange"
                    android:textColor="@color/white"
                    android:text="@string/check_report_two"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/orange"
                    android:textColor="@color/white"
                    android:text="@string/check_report_three"/>
            </LinearLayout>

            <com.tallty.smart_life_android.custom.MyRecyclerView
                android:id="@+id/check_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:background="@color/white"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="健康建议"
                    android:textSize="@dimen/text_small"
                    android:drawableLeft="@drawable/check_report_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/check_report_suggest"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>