<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/one_report_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:fitsSystemWindows="false">

    <include layout="@layout/toolbar"/>

    <!--主体内容-->
    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="1px"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/check_report_one"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="1px"
                android:layout_marginRight="1px"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/check_report_two"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/check_report_three"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.tallty.smart_life_android.custom.MyRecyclerView
                    android:id="@+id/check_report_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:clickable="true"
                    android:layout_marginBottom="4dp"/>
                <ImageView
                    android:id="@+id/icon_one"
                    android:layout_width="40dp"
                    android:layout_height="36dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:background="@color/white"
                    android:src="@drawable/me_healthy"
                    android:layout_below="@id/check_report_list"/>
                <TextView
                    android:id="@+id/text_one"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:textSize="@dimen/text_14"
                    android:text="健康建议"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@id/icon_one"
                    android:layout_below="@id/check_report_list"/>
                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/app_bg"
                    android:layout_below="@id/text_one"/>
                <com.tallty.smart_life_android.custom.MyRecyclerView
                    android:id="@+id/check_report_advise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line"
                    android:scrollbars="none"
                    android:layout_marginBottom="4dp"/>
            <!--健康建议-->
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>