<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="false"
    android:background="@color/app_bg">

    <include layout="@layout/toolbar"/>

    <!--主体部分-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp">
        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:padding="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/form_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/white">
                    <ImageView
                        android:id="@+id/icon_phone"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/login_phone_icon"
                        android:padding="13dp"
                        android:layout_width="48dp"
                        android:layout_height="48dp"/>
                    <EditText
                        android:id="@+id/reset_phone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/icon_phone"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="@color/white"
                        android:hint="@string/sign_phone"
                        android:inputType="phone"
                        android:textSize="@dimen/text_14"/>
                    <View
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/reset_phone"
                        android:background="@color/app_bg"/>


                    <ImageView
                        android:id="@+id/icon_message"
                        android:layout_below="@id/line1"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/login_message_icon"
                        android:padding="13dp"
                        android:layout_width="48dp"
                        android:layout_height="48dp"/>
                    <TextView
                        android:id="@+id/reset_code_btn"
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/line1"
                        android:gravity="center"
                        android:textSize="@dimen/text_14"
                        android:textColor="@color/global_text"
                        android:text="@string/sign_code"/>
                    <View
                        android:id="@+id/vertical_line"
                        android:layout_width="1dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_below="@id/line1"
                        android:layout_toLeftOf="@id/reset_code_btn"
                        android:background="@color/app_bg"/>
                    <EditText
                        android:id="@+id/reset_code"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_below="@id/line1"
                        android:layout_toRightOf="@id/icon_message"
                        android:layout_toLeftOf="@id/vertical_line"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="@color/white"
                        android:inputType="number"
                        android:textSize="@dimen/text_14"
                        android:hint="@string/sign_input_code"/>

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/reset_code"
                        android:background="@color/app_bg"/>

                    <ImageView
                        android:id="@+id/icon_password"
                        android:layout_below="@id/line2"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/login_password_icon"
                        android:padding="13dp"
                        android:layout_width="48dp"
                        android:layout_height="48dp"/>
                    <EditText
                        android:id="@+id/reset_password"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_below="@id/line2"
                        android:layout_toRightOf="@id/icon_password"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_14"
                        android:hint="@string/sign_pwd_tips"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/reset_password_btn"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/form_input"
                    android:background="@color/orange"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_18"
                    android:text="重置"
                    android:gravity="center"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>